--- a/environment.yml
+++ b/environment.yml
@@ -1,20 +1,193 @@
 name: autoimmuneML_env
 channels:
-  - defaults
   - conda-forge
+  - defaults
 dependencies:
-  - bzip2=1.0.8
-  - ca-certificates=2024.12.31
-  - libffi=3.4.4
-  - ncurses=6.4
-  - openssl=3.0.15
-  - pip=24.2
-  - python=3.10.16
-  - readline=8.2
-  - setuptools=75.1.0
-  - sqlite=3.45.3
-  - tk=8.6.14
-  - tzdata=2024b
-  - wheel=0.44.0
-  - xz=5.4.6
-  - zlib=1.2.13
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - bzip2=1.0.8=h4bc722e_7
+  - ca-certificates=2024.12.14=hbcca054_0
+  - ld_impl_linux-64=2.43=h712a8e2_2
+  - libffi=3.4.2=h7f98852_5
+  - libgcc=14.2.0=h77fa898_1
+  - libgcc-ng=14.2.0=h69a702a_1
+  - libgomp=14.2.0=h77fa898_1
+  - liblzma=5.6.3=hb9d3cd8_1
+  - libnsl=2.0.1=hd590300_0
+  - libsqlite=3.47.2=hee588c1_0
+  - libuuid=2.38.1=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libzlib=1.3.1=hb9d3cd8_2
+  - ncurses=6.5=h2d0b736_2
+  - openssl=3.4.0=h7b32b05_1
+  - pip=24.3.1=pyh8b19718_2
+  - python=3.10.16=he725a3c_1_cpython
+  - readline=8.2=h8228510_1
+  - setuptools=75.8.0=pyhff2d567_0
+  - tk=8.6.13=noxft_h4845f30_101
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - pip:
+      - aiobotocore==2.5.4
+      - aiohappyeyeballs==2.4.4
+      - aiohttp==3.11.11
+      - aioitertools==0.12.0
+      - aiosignal==1.3.2
+      - anndata==0.11.3
+      - annotated-types==0.7.0
+      - appdirs==1.4.4
+      - array-api-compat==1.10.0
+      - asciitree==0.3.3
+      - async-timeout==5.0.1
+      - attrs==24.3.0
+      - baron==0.10.1
+      - blessed==1.20.0
+      - botocore==1.31.17
+      - certifi==2024.12.14
+      - charset-normalizer==3.4.1
+      - click==8.1.8
+      - cloudpickle==3.1.1
+      - colorcet==3.1.0
+      - coloredlogs==15.0.1
+      - contourpy==1.3.1
+      - crunch-cli==5.8.2
+      - cycler==0.12.1
+      - dask==2024.12.1
+      - dask-expr==1.1.21
+      - dask-image==2024.5.3
+      - dataclasses-json==0.6.7
+      - datashader==0.16.3
+      - distributed==2024.12.1
+      - editor==1.6.6
+      - exceptiongroup==1.2.2
+      - fasteners==0.19
+      - filelock==3.16.1
+      - fonttools==4.55.3
+      - frozenlist==1.5.0
+      - fsspec==2023.6.0
+      - geopandas==1.0.1
+      - h5py==3.12.1
+      - humanfriendly==10.0
+      - idna==3.10
+      - imageio==2.36.1
+      - importlib-metadata==8.5.0
+      - iniconfig==2.0.0
+      - inquirer==3.4.0
+      - jinja2==3.1.5
+      - jmespath==1.0.1
+      - joblib==1.4.2
+      - kiwisolver==1.4.8
+      - lazy-loader==0.4
+      - legacy-api-wrap==1.4.1
+      - lightning-utilities==0.11.9
+      - llvmlite==0.43.0
+      - locket==1.0.0
+      - markdown-it-py==3.0.0
+      - markupsafe==3.0.2
+      - marshmallow==3.25.1
+      - matplotlib==3.10.0
+      - matplotlib-scalebar==0.8.1
+      - mdurl==0.1.2
+      - mpmath==1.3.0
+      - msgpack==1.1.0
+      - multidict==6.1.0
+      - multipledispatch==1.0.0
+      - multiscale-spatial-image==2.0.2
+      - mypy-extensions==1.0.0
+      - natsort==8.4.0
+      - networkx==3.4.2
+      - numba==0.60.0
+      - numcodecs==0.13.1
+      - numpy==1.26.4
+      - nvidia-cublas-cu12==12.4.5.8
+      - nvidia-cuda-cupti-cu12==12.4.127
+      - nvidia-cuda-nvrtc-cu12==12.4.127
+      - nvidia-cuda-runtime-cu12==12.4.127
+      - nvidia-cudnn-cu12==9.1.0.70
+      - nvidia-cufft-cu12==11.2.1.3
+      - nvidia-curand-cu12==10.3.5.147
+      - nvidia-cusolver-cu12==11.6.1.9
+      - nvidia-cusparse-cu12==12.3.1.170
+      - nvidia-nccl-cu12==2.21.5
+      - nvidia-nvjitlink-cu12==12.4.127
+      - nvidia-nvtx-cu12==12.4.127
+      - ome-zarr==0.10.3
+      - opencv-python==4.11.0.86
+      - openslide-python==1.4.1
+      - packaging==24.2
+      - pandas==2.2.3
+      - param==2.2.0
+      - partd==1.4.2
+      - patsy==1.0.1
+      - pillow==11.1.0
+      - pims==0.7
+      - platformdirs==4.3.6
+      - pluggy==1.5.0
+      - pooch==1.8.2
+      - propcache==0.2.1
+      - psutil==6.1.1
+      - pyarrow==19.0.0
+      - pyct==0.5.0
+      - pydantic==2.10.5
+      - pydantic-core==2.27.2
+      - pygments==2.19.1
+      - pyogrio==0.10.0
+      - pyparsing==3.2.1
+      - pyproj==3.7.0
+      - pytest==8.3.4
+      - python-dateutil==2.9.0.post0
+      - python-dotenv==1.0.1
+      - pytorch-lightning==2.5.0.post0
+      - pytz==2024.2
+      - pyyaml==6.0.2
+      - readchar==4.2.1
+      - redbaron==0.9.2
+      - requests==2.32.3
+      - requests-toolbelt==1.0.0
+      - requirements-parser==0.11.0
+      - rich==13.9.4
+      - rply==0.7.8
+      - runs==1.2.2
+      - s3fs==2023.6.0
+      - scanpy==1.10.4
+      - scikit-image==0.25.0
+      - scikit-learn==1.6.1
+      - scipy==1.15.1
+      - seaborn==0.13.2
+      - session-info==1.0.0
+      - shapely==2.0.6
+      - six==1.17.0
+      - slicerator==1.1.0
+      - sortedcontainers==2.4.0
+      - spatial-image==1.1.0
+      - spatialdata==0.2.6
+      - spatialdata-plot==0.2.8
+      - statsmodels==0.14.4
+      - stdlib-list==0.11.0
+      - sympy==1.13.1
+      - tblib==3.0.0
+      - threadpoolctl==3.5.0
+      - tifffile==2025.1.10
+      - tomli==2.2.1
+      - toolz==1.0.0
+      - torch==2.5.1
+      - torchmetrics==1.6.1
+      - tornado==6.4.2
+      - tqdm==4.67.1
+      - triton==3.1.0
+      - types-setuptools==75.8.0.20250110
+      - typing-extensions==4.12.2
+      - typing-inspect==0.9.0
+      - tzdata==2024.2
+      - urllib3==1.26.20
+      - wcwidth==0.2.13
+      - wrapt==1.17.2
+      - xarray==2024.11.0
+      - xarray-dataclasses==1.9.1
+      - xarray-schema==0.0.3
+      - xarray-spatial==0.4.0
+      - xmod==1.8.1
+      - yarl==1.18.3
+      - zarr==2.18.3
+      - zict==3.0.0
+      - zipp==3.21.0
+prefix: /home/gridsan/aecohen/.conda/envs/autoimmuneML_env
